@@ -1,5 +1,9 @@
 yoshimi 1.3.*
 
+2015-2-14 Will
+- bank swaps/ID changes now in place
+  but not checked for unwritable locations
+
 2015-2-13 Will
 - Basic structure complete and working
   but changing IDs etc. not yet implemented
